--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -62,6 +62,11 @@ $col2: #dc3545;
   height: 502px;
 }
 
+.visual_img {
+  height: 100%;
+  width: 100%;
+}
+
 /* Main Componet content 2 영역 css */
 .main {
   @include flex();
