김지윤 / css 결합

--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -67,6 +67,15 @@ $col2: #dc3545;
   width: 100%;
 }
 
+.searchBox_back {
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 110px;
+}
+.searchBox {
+  margin: 0 auto;
+  width: 550px;
+}
+
 /* Main Componet content 2 영역 css */
 .main {
   @include flex();
