--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -83,7 +83,7 @@ $col2: #dc3545;
 .searchBox_bg {
   background-color: rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
-  height: 110px;
+  height: 90px;
   padding-top: 20px;
 }
 
@@ -98,8 +98,9 @@ $col2: #dc3545;
       @include border-radius(30px 0 0 30px);
       flex: 1;
       font-size: 18px;
+      text-align: center;
     }
-    span {
+    button {
       @include border-radius(0 30px 30px 0);
       background-color: #64d4e9;
       border: 3px solid #fff;
