--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -93,19 +93,26 @@ $col2: #dc3545;
   width: 550px;
   &_inputGroup {
     @include flex();
+    background-color: $white;
     height: 48px;
+    img {
+      width: auto;
+      max-height: 100%;
+      cursor: default;
+    }
     input {
-      @include border-radius(30px 0 0 30px);
+      // @include border-radius(30px 0 0 30px);
+      border: none;
       flex: 1;
-      font-size: 18px;
-      text-align: center;
+      font-size: 16px;
+      // text-align: center;
     }
     button {
-      @include border-radius(0 30px 30px 0);
+      // @include border-radius(0 30px 30px 0);
       background-color: #64d4e9;
       border: 3px solid #fff;
       color: $white;
-      font-size: 18px;
+      font-size: 16px;
       text-align: center;
       vertical-align: middle;
     }
