--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -185,6 +185,7 @@ $col2: #dc3545;
     li.copy {
       margin: 20px 0 0 0;
       span {
+        display:block;
         font-family: 'Arial', sans-serif;
       }
     }
