푸터 텍스트 가운데 정렬

--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -172,7 +172,7 @@ $col2: #dc3545;
   }
   &_corp_info {
     padding: 0;
-    text-align: right;
+    text-align: center;
     li {
       margin: 0 0 5px;
       p {
