--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -156,13 +156,12 @@ $col2: #dc3545;
 
 /* Main Componet footer 영역 css */
 .footer {
-  background: #fff;
+  background: #373737;
   border-top: 1px solid #e5e5e5;
-  padding: 18px 0;
   &_inner {
     box-sizing: border-box;
     margin: 0 auto;
-    max-width: 980px;
+    max-width: 1024px;
     padding: 0 10px;
   }
   &_inner::after {
@@ -171,12 +170,11 @@ $col2: #dc3545;
     display: block;
   }
   &_corp_info {
-    padding: 0;
-    text-align: center;
+    padding: 0 0 18px;
     li {
-      margin: 0 0 5px;
+      margin: 0 0 15px;
       p {
-        color: #bbb;
+        color: #aaa;
         font-size: 0.85em;
         letter-spacing: -0.5px;
       }
@@ -185,6 +183,71 @@ $col2: #dc3545;
       margin: 20px 0 0 0;
       span {
         font-family: 'Arial', sans-serif;
+      }
+    }
+    li {
+      .link_top{
+        @include flex();
+        justify-content:space-between;
+        height:69px;
+        border-bottom:1px solid #454545;
+        .link_info{
+          @include flex();
+          align-items: center;
+          height:100%;
+          a{
+            position:relative;
+            display:inline-block;
+            color:#aaa;
+            font-size:13px;
+          }
+          a:before{
+            content:'';
+            display:inline-block;
+            position:relative;
+            top:1px;
+            width:1px;
+            height:12px;
+            padding-left:10px;
+            margin-left:10px;
+            border-left:1px solid #666;
+          }
+          a:first-child:before{
+            display:none;
+          }
+          a:nth-child(3){
+            color:$white;
+            font-weight:bold;
+          }
+        }
+        .top_move{
+          justify-self: flex-end;
+          width:70px;
+          height:100%;
+          border-left:1px solid #454545;
+          border-right:1px solid #454545;
+          cursor:pointer;
+        }
+        .top_move:before{
+          content: "";
+          display: block;
+          width: 0px;
+          height: 0px;
+          margin: 14px auto 0px;
+          border-top: 7px solid transparent;
+          border-right: 5px solid transparent;
+          border-bottom: 7px solid rgb(210, 214, 218);
+          border-left: 5px solid transparent;
+        }
+        .top_move:after{
+          content: "TOP";
+          display: block;
+          margin-top: 7px;
+          color: rgb(210, 214, 218);
+          font-size: 11px;
+          font-weight: 300;
+          text-align: center;
+        }
       }
     }
   }
