--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -400,3 +400,122 @@ $imgUrl: "~@/assets/images/";
     }
   }
 }
+// mainComponent
+.room_search { 
+  width: 1180px; 
+  position: relative; 
+  margin: 0px auto; 
+  border-top: 1px solid rgb(238, 238, 238); 
+  .room_search_title {
+    margin-top: 36px;
+    text-align:center;
+    span {
+      font-size:25px;
+      font-weight:bold;
+    }
+    p {
+      color:rgb(102, 102, 102);
+    }
+  }
+  .room_slide { 
+    width: 100%; 
+    height: 172px; 
+    margin-top: 26px; 
+    position: relative; 
+    .mask { 
+      width: 100%; 
+      height: 100%; 
+      position: relative; 
+      overflow: hidden; 
+    }
+    .list { 
+      width: 1777px; 
+      height: 172px; 
+      position: relative; 
+      right: 0px; 
+      transition: right 300ms ease-out 0s;
+      a { 
+        float: left; 
+        width: 185px; 
+        height: 172px;
+        @at-root .product_box { 
+          width: 185px; 
+          height: 172px; 
+          background-color: rgb(255, 255, 255); 
+          border-radius: 5px; 
+          .thumnail {
+            width: 100%;
+            height: 100px;
+            border-top-right-radius: 5px;
+            border-top-left-radius: 5px;
+            background: url(/static/media/easy_1.8ea3046f.png) center center / cover no-repeat;
+            background-color:#eee;
+          }
+          .cont { 
+            width: 100%;
+            height: 72px;
+            border-bottom-right-radius: 5px;
+            border-bottom-left-radius: 5px;
+            padding: 14px;
+            border-left: 1px solid rgb(238, 238, 238);
+            border-right: 1px solid rgb(238, 238, 238);
+            border-bottom: 1px solid rgb(238, 238, 238);
+            @include boxSizing();
+            p{
+              height: 21px;
+              color: rgb(68, 68, 68);
+              font-size: 15px;
+              line-height: 21px;
+            }
+          }
+        }
+      }
+      a + a {margin-left: 14px;}
+    }
+    .btn_moving { 
+      width: 40px; 
+      height: 40px; 
+      box-shadow: rgba(0, 0, 0, 0.08) 0px 0px 3px 1px; 
+      background-color: rgb(255, 255, 255); 
+      position: absolute; 
+      top: 50%; 
+      right: -20px; 
+      transform: translateY(-50%); 
+      z-index: 1; 
+      border-width: 0px; 
+      border-style: initial; 
+      border-color: initial; 
+      border-image: initial; 
+      border-radius: 50%;
+      svg{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    .btn_moving:hover{box-shadow: rgba(0, 0, 0, 0.13) 0px 0px 8px 3px;}
+  }
+  .room_page{
+    margin-top: 30px;
+    font-size: 13px;
+    font-weight: 700;
+    text-align: center;
+    a{
+      display:inline-block;
+      display: inline-block;
+      height: 24px;
+      margin-right: 24px;
+      color: rgb(158, 156, 156);
+      font-size: 13px;
+      font-weight: 700;
+      text-align: center;
+      cursor: pointer;
+      border-bottom: 2px solid transparent;
+    }
+    a.on{
+      border-bottom:2px solid rgb(34, 34, 34);
+      color: rgb(34, 34, 34);
+    }
+  }
+}
