--- a/frontend/src/assets/scss/global/mixin.scss
+++ b/frontend/src/assets/scss/global/mixin.scss
@@ -12,3 +12,18 @@
   -ms-border-radius: $radius;
   border-radius: $radius;
 }
+
+@mixin scrollbar() {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: rgb(135, 135, 135);
+    &:hover {
+      background: rgb(89, 89, 89);
+    }
+  }
+  &::-webkit-scrollbar-track {
+    background: rgb(241, 241, 241);
+  }
+}
