--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -103,7 +103,17 @@ $imgUrl: "~@/assets/images/";
   padding-bottom: 113px;
   padding-top: 115px;
   width: 100%;
-
+  &_white_modal {
+    background-color: rgba(255, 255, 255, 0.95);
+    bottom: 0;
+    height: 100%;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 100%;
+    z-index: 10;
+  }
   &_title {
     color: $dabangblack;
     font-size: 46px;
@@ -112,6 +122,7 @@ $imgUrl: "~@/assets/images/";
     line-height: 58px;
     position: relative;
     text-align: center;
+    z-index: 20;
   }
   span {
     color: $dabangblue;
@@ -148,6 +159,7 @@ $imgUrl: "~@/assets/images/";
   margin-top: 28px;
   position: relative;
   width: 800px;
+  z-index: 20;
   &_inputGroup {
     @include flex();
     background-color: $white;
