--- a/frontend/src/assets/scss/global/main.scss
+++ b/frontend/src/assets/scss/global/main.scss
@@ -600,3 +600,29 @@ $imgUrl: "~@/assets/images/";
     }
   }
 }
+
+/* loginComponent */
+.login {
+  animation: 250ms ease-in-out 0s 1 normal none running boJeDs;
+  background-color: rgba(0, 0, 0, 0.7);
+  bottom: 0;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 10% 0;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 1000;
+  &_wrap {
+    background-color: rgb(255, 255, 255);
+    box-shadow: rgba(0, 0, 0, 0.25) 0 15px 18px -10px;
+    margin: 0 auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
+    transition: width 300ms ease-in-out 0s;
+    width: 420px;
+    z-index: 1001;
+  }
+}
